client/src/components/LoginModal/LoginModal.css
.loginModalContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  height: 100vh;
  width: 100vw;
}

.loginModal {
  border-radius: 10px;
  width: 400px;
  background-color: var(--bg-brown);
  
  color: white;
  font-family: "Macondo";
  text-align: center;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 2rem;
  border: 4px solid var(--bg-gold);
  transform: translateY(-128px);
}

.loginModal label {
  margin: 0;
  padding: 0;
  font-size: 36px;
}

.loginModal input {
  width: 300px;
  height: 30px;
  margin: 10px;
  border-radius: 5px;
  border: none;
  padding: 5px;
  font-size: 16px;
}

.loginModal button {
  font-size: 1.25rem;
  display: block;
  width: 180px;
  height: 46px;
  background: var(--bg-light-brown);
  border: 1px solid #000000;
  border-radius: 20px;
  margin: 1rem 1rem 0rem 1rem;
}

.loginModal button:hover {
  background: var(--bg-gold);
  color: var(--bg-brown);
  cursor: pointer;
}

.crown {
  position: relative;
  bottom: 0;
  transform: translateY(-128px);
}

.signUpHeader {
  position: relative;
  bottom: 0;
  transform: translateY(15px);
  z-index: 100;
  font-family: "Macondo";
  font-style: normal;
  font-weight: 400;
  font-size: 128px;
  line-height: 151px;
  color: #f2c600;
  -webkit-text-stroke-width: 3px;
  -webkit-text-stroke-color: #363636;
}

